haskell.yml
---
apiVersion: v1
kind: Service
metadata:
  name: haskell
  labels:
    app: haskell
spec:
  type: LoadBalancer
  selector:
    app: haskell
  ports:
  - name: webserve-http
    protocol: TCP
    port: 3000
    targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: haskell
spec:
  replicas: 1
  selector:
    matchLabels:
      app: haskell
  template:
    metadata:
      labels:
        app: haskell
    spec:
      containers:
      - name: haskell
        imagePullPolicy: IfNotPresent
        image: localhost:32000/postgrest/postgrest:registry
        ports:
        - containerPort: 3000
          name: webserve-http
      nodeSelector:
        nodetype: database-node
