redis-cheirrs-oseer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cheirrs-oseer
  labels:
    app: redis-cheirrs-oseer
spec:
  type: LoadBalancer
  selector:
    app: redis-cheirrs-oseer
  ports:
  - name: red-chr-os
    protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cheirrs-oseer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-cheirrs-oseer
  template:
    metadata:
      labels:
        app: redis-cheirrs-oseer
    spec:
      containers:
      - name: redis-cheirrs-oseer
        image: localhost:32000/redis:5.0.4
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: "0.1"
        volumeMounts:
        - mountPath: /redis-master-data
          name: data-cheirrs-oseer
        - mountPath: /redis-master
          name: config-cheirrs-oseer
      volumes:
        - name: data-cheirrs-oseer
          persistentVolumeClaim:
            claimName: redis-cheirrs-oseer-claim
        - name: config-cheirrs-oseer
          persistentVolumeClaim:
            claimName: config-cheirrs-oseer-claim
      nodeSelector:
        nodetype: database-node
